--- a/.github/workflows/ctfd-update.yaml
+++ b/.github/workflows/ctfd-update.yaml
@@ -31,15 +31,9 @@ jobs:
         run: |-
           docker build -t "${{ secrets.registry_hostname }}/${{ secrets.project_id }}/${{ secrets.registry_name }}/ctfd:latest" CTFd
           docker push "${{ secrets.registry_hostname }}/${{ secrets.project_id }}/${{ secrets.registry_name }}/ctfd:latest"
-      # # - name: Modify CTFd Cloud Run YAML
-      #   uses: teunmooij/yaml@v1
-      #   with:
-      #     from-file: config/ctfd-cr.yaml
-      #     to-file: config/ctfd-cr.yaml
-      #     merge: { 'spec.template.spec.containers': [ { 'image': "gcr.io/${{ secrets.registry_hostname }}/${{ secrets.project_id }}/${{ secrets.registry_name }}/ctfd:${{ github.sha }}" } ] }
-      # - name: Test YAML
-      #   run: cat confit/ctfd-cr.yaml
       - name: Update Cloud Run
         uses: 'google-github-actions/deploy-cloudrun@v2'
         with:
-          metadata: config/ctfd-cr.yaml
+          image: "${{ secrets.registry_hostname }}/${{ secrets.project_id }}/${{ secrets.registry_name }}/ctfd:latest"
+          flags: "--add-cloud-sql-instances=${{ secrets.ctfd_db_conn_name }}"
+         # metadata: config/ctfd-cr.yaml
