--- a/.github/workflows/ctfd-update-dev.yaml
+++ b/.github/workflows/ctfd-update-dev.yaml
@@ -37,7 +37,6 @@ jobs:
            docker build -t "${{ vars.registry_hostname }}/${{ vars.project_id }}/${{ vars.registry_name }}/ctfd:latest" CTFd
            docker push "${{ vars.registry_hostname }}/${{ vars.project_id }}/${{ vars.registry_name }}/ctfd:latest"
       - name: Update Cloud Run 
-        id: update_cloud_run
         run: |-
           gcloud run deploy ctfd \
           --region=us-central1 \
@@ -54,7 +53,8 @@ jobs:
           --region ${{ vars.region }}
       - name: 'Update DNS'
         run: |-
-          hostname="$(echo ${{ steps.update_cloud_run.outputs.url }} | sed -e 's/[^/]*\/\/\([^@]*@\)\?\([^:/]*\).*/\2/')."
+          ctfd_url="$(gcloud run services describe ctfd --region ${{ vars.region }} --format 'value(status.url)')"
+          hostname="$(echo $ctfd_url | sed -e 's/[^/]*\/\/\([^@]*@\)\?\([^:/]*\).*/\2/')."
           
           gcloud dns record-sets create "ctfd.${{ vars.dns_base_name }}" \
           --rrdatas="$hostname" \
