--- a/.github/workflows/challenge-update.yaml
+++ b/.github/workflows/challenge-update.yaml
@@ -65,7 +65,7 @@ jobs:
           docker push $image
           echo "image=$image" >> $GITHUB_ENV
       # For other
-      - name: 'Other: Update VM'
+      - name: 'Update VM'
         if: steps.check_dockerfile.outputs.files_exists == 'true' && env.category != 'web'
         run: |-
           PORT_STR=""
@@ -78,26 +78,6 @@ jobs:
           gcloud auth configure-docker us-central1-docker.pkg.dev
           gcloud compute ssh ${{ vars.challs_vm_name }} --zone=${{ vars.challs_vm_zone }} --command="sudo docker kill ${{ env.challenge }} || true; sudo docker rm ${{ env.challenge }} || true; sudo docker run --pull=always -d --name ${{ env.challenge }} $PORT_STR ${{ env.image }}"
       # For both
-      - name: 'Update DNS'
-        if: steps.check_dockerfile.outputs.files_exists == 'true'
-        run: |-
-          if [ ${{ env.category }} == 'web' ]; then
-            hostname="$(echo ${{ steps.update_cloud_run.outputs.url }} | sed -e 's/[^/]*\/\/\([^@]*@\)\?\([^:/]*\).*/\2/')."
-            type='CNAME'
-          else
-            hostname=${{ vars.challs_vm_ip }}
-            type='A'
-          fi
-          
-          gcloud dns record-sets create "${{ env.challenge }}.${{ vars.dns_base_name }}" \
-          --rrdatas="$hostname" \
-          --type=$type --ttl=60 \
-          --zone=${{ vars.dns_zone }} \
-          || \
-          gcloud dns record-sets update "${{ env.challenge }}.${{ vars.dns_base_name }}" \
-          --rrdatas="$hostname" \
-          --type=$type --ttl=60 \
-          --zone=${{ vars.dns_zone }}
       - name: Upload Static Files
         if: steps.check_static.outputs.files_exists == 'true'
         uses: google-github-actions/upload-cloud-storage@v2
