--- a/.github/workflows/challenge-update.yaml
+++ b/.github/workflows/challenge-update.yaml
@@ -20,7 +20,6 @@ jobs:
           
           echo "category=${tokens[0]}" >> $GITHUB_ENV
           echo "challenge=${tokens[1]}" >> $GITHUB_ENV
-          
       # Check for files
       - name: Check for Dockerfile
         id: check_dockerfile
@@ -31,13 +30,13 @@ jobs:
         id: check_dockercompose
         uses: andstor/file-existence-action@v3.0.0
         with:
-          files: "challenges/${{ github.head_ref }}/compose.yaml, challenges/${{ github.head_ref }}/docker-compose.yaml"
+          files: "challenges/${{ github.head_ref }}/docker-compose.yaml"
       - name: Check for Static Folder
         id: check_static
         uses: andstor/file-existence-action@v3.0.0
         with:
           files: "challenges/${{ github.head_ref }}/static" 
-      # Authentication
+      # GCP Authentication
       - name: Authenticate with GCP
         id: gcp-auth
         uses: 'google-github-actions/auth@v2'
@@ -48,25 +47,47 @@ jobs:
           service_account: ${{ vars.workload_identity_provider_sa_name }}
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v2'
+      # Updating Challenge...
+      - name: Select VM
+        if: steps.check_dockercompose.outputs.files_exists == 'true' || steps.check_dockerfile.outputs.files_exists == 'true'
+        run: |-
+          if [ ${{ env.category }} == 'web' ]; then
+            vm_zone=${{ vars.WEB_VM_ZONE }}
+            vm_name=${{ vars.WEB_VM_NAME }}
+          else
+            vm_zone=${{ vars.CHALLS_VM_ZONE }}
+            vm_name=${{ vars.CHALLS_VM_NAME }}
+          fi
+          
+          echo "vm_zone=$vm_zone" >> $GITHUB_ENV
+          echo "vm_name=$vm_name" >> $GITHUB_ENV
+      # For docker-compose
+      - name: Update Dockercompose
+        if: steps.check_dockercompose.outputs.files_exists == 'true'
+        run: |-
+          # Clean up old docker compose
+          gcloud compute ssh umasscybersec@$vm_name --zone=$vm_zone --command="(cd /home/umasscybersec/challenges/${{ env.challenge }} && (docker compose down; cd .. && rm -rf ./${{ env.challenge }})) || true"
+          # Upload and start new one
+          gcloud compute scp --zone=$vm_zone --recurse challenges/${{ github.head_ref }} umasscybersec@$vm_name:/home/umasscybersec/challenges/${{ env.challenge }}
+          gcloud compute ssh umasscybersec@$vm_name --zone=$vm_zone --command="cd /home/umasscybersec/challenges/${{ env.challenge }} && docker compose up --build -d"       
+      # For docker
       - name: Docker Auth
-        if: steps.check_dockerfile.outputs.files_exists == 'true'
+        if: steps.check_dockercompose.outputs.files_exists != 'true' && steps.check_dockerfile.outputs.files_exists == 'true'
         id: docker-auth
         uses: 'docker/login-action@v1'
         with:
           username: 'oauth2accesstoken'
           password: ${{ steps.gcp-auth.outputs.access_token }}
-          registry: ${{ vars.docker_repo_hostname }}
-      # Updating...
-      - name: 'Build and Push Container'
-        if: steps.check_dockerfile.outputs.files_exists == 'true'
+          registry: ${{ vars.docker_repo_hostname}}
+      - name: Build and Push Container
+        if: steps.check_dockercompose.outputs.files_exists != 'true' && steps.check_dockerfile.outputs.files_exists == 'true'
         run: |-
-          image="${{ vars.docker_repo_hostname}}/${{ vars.project_id }}/${{ vars.docker_repo_name}}/${{github.head_ref}}:latest"
+          image="${{ vars.docker_repo_hostname }}/${{ vars.project_id }}/${{ vars.docker_repo_name}}/${{ github.head_ref }}:latest"
           docker build -t $image "challenges/${{github.head_ref}}"
           docker push $image
           echo "image=$image" >> $GITHUB_ENV
-      # For other
-      - name: 'Update VM'
-        if: steps.check_dockerfile.outputs.files_exists == 'true' && env.category != 'web'
+      - name: Update Docker
+        if: steps.check_dockercompose.outputs.files_exists != 'true' && steps.check_dockerfile.outputs.files_exists == 'true'
         run: |-
           PORT_STR=""
           source "challenges/${{ github.head_ref }}/config.env"
@@ -76,8 +97,8 @@ jobs:
           done;
           #TODO unsudo
           gcloud auth configure-docker us-central1-docker.pkg.dev
-          gcloud compute ssh ${{ vars.challs_vm_name }} --zone=${{ vars.challs_vm_zone }} --command="sudo docker kill ${{ env.challenge }} || true; sudo docker rm ${{ env.challenge }} || true; sudo docker run --pull=always -d --name ${{ env.challenge }} $PORT_STR ${{ env.image }}"
-      # For both
+          gcloud compute ssh umasscybersec@${{ env.vm_name }} --zone=${{ env.vm_zone }} --command="docker kill ${{ env.challenge }} || true; sudo docker rm ${{ env.challenge }} || true; sudo docker run --pull=always -d --name ${{ env.challenge }} $PORT_STR ${{ env.image }}"
+      # Other tasks
       - name: Upload Static Files
         if: steps.check_static.outputs.files_exists == 'true'
         uses: google-github-actions/upload-cloud-storage@v2
@@ -87,4 +108,4 @@ jobs:
       - name: Update CTFd
         run: |-
           ctfd_url="$(gcloud run services describe ctfd --region ${{ vars.region }} --format 'value(status.url)')"
-          ./scripts/ctfduploader $ctfd_url "${{ secrets.ctfd_token }}" "${{ vars.static_assets_bucket_name }}" "challenges" "defaults.yaml"
+          ./scripts/ctf-uploader "challenges" "defaults.yaml" $ctfd_url "${{ secrets.ctfd_token }}" "${{ vars.static_assets_bucket_name }}"
