--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,15 +15,22 @@ jobs:
           echo "challenge=${tokens[1]}" >> $GITHUB_ENV
       - name: test does not exist 
         run: |-
-          if [ ${{env.category}} == 'web' && -z ${{ vars.WEB_VM_ZONE }} ]; then 
-            echo "bad"
+          if [ ${{env.category}} != 'web' && -z ${{ vars.WEB_VM_ZONE }} ]; then 
+            echo "it does NOT exist"
           else 
-            echo "good"
+            echo "it does exist"
           fi 
       - name: test exists
         run: |-
-          if [ ${{env.category}} == 'web' && -z ${{ vars.test }} ]; then 
-            echo "bad"
+          if [ ${{env.category}} != 'web' && -z ${{ vars.test }} ]; then 
+            echo "it does NOT exist"
           else 
-            echo "good"
+            echo "it does exist"
+          fi
+      - name: test web 
+        run: |-
+          if [ ${{env.category}} == 'web' ]; then 
+            echo "it does exist"
+          else 
+            echo "it does NOT exist"
           fi
