--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,17 +15,17 @@ jobs:
           echo "challenge=${tokens[1]}" >> $GITHUB_ENV
       - name: test does not exist 
         run: |-
-          if [ ${{env.category}} != 'web' && -z ${{ vars.WEB_VM_ZONE }} ]; then 
-            echo "it does NOT exist"
-          else 
+          if [ ${{env.category}} == 'web' && [[ ! -z ${{ vars.random}} ]] ]; then 
             echo "it does exist"
+          else 
+            echo "it does NOT exist"
           fi 
       - name: test exists
         run: |-
-          if [ ${{env.category}} != 'web' && -z ${{ vars.test }} ]; then 
-            echo "it does NOT exist"
-          else 
+          if [ ${{env.category}} == 'web' && [[ ! -z ${{ vars.test }} ]] ]; then 
             echo "it does exist"
+          else 
+            echo "it does NOT exist"
           fi
       - name: test web 
         run: |-
