--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,14 +15,15 @@ jobs:
           echo "challenge=${tokens[1]}" >> $GITHUB_ENV
       - name: test does not exist 
         run: |-
-          if [ ${{env.category}} == 'web' && [[ ! -z ${{ vars.random}} ]] ]; then 
+          if [ ${{env.category}} == 'web' && [[ ! -v ${{ vars.random}} ]] ]; then 
             echo "it does exist"
           else 
             echo "it does NOT exist"
           fi 
       - name: test exists
         run: |-
-          if [ ${{env.category}} == 'web' && [[ ! -z ${{ vars.test }} ]] ]; then 
+          if [ ${{env.category}} == 'web' && [[ ! -v ${{ vars.test }} ]] ]; then 
+
             echo "it does exist"
           else 
             echo "it does NOT exist"
