--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,6 +13,14 @@ jobs:
           
           echo "category=${tokens[0]}" >> $GITHUB_ENV
           echo "challenge=${tokens[1]}" >> $GITHUB_ENV
+      - name: test 
+        run: |-
+        if [ -z "$a" ]
+        then
+          echo "not defined"
+        else 
+          echo "defined"
+        fi
       - name: test does not exist 
         run: |-
           if [ ${{env.category}} == 'web' && [[ ! -v ${{ vars.random}} ]] ]; then 
