--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,7 +15,7 @@ jobs:
           echo "challenge=${tokens[1]}" >> $GITHUB_ENV
       - name: test 
         run: |-
-          if [ -z ${{ vars.test }} ]
+          if [ ! -z ${{ vars.test }} ]
           then
             echo "not defined"
           else 
