--- a/.github/workflows/challenge-update.yaml
+++ b/.github/workflows/challenge-update.yaml
@@ -51,12 +51,18 @@ jobs:
       - name: Select VM
         if: steps.check_dockercompose.outputs.files_exists == 'true' || steps.check_dockerfile.outputs.files_exists == 'true'
         run: |-
-          if [ ${{ env.category }} == 'web' && -z ${{ vars.WEB_VM_ZONE }}]; then
+          if [ ${{ env.category }} == 'web' ] && [ ! -z ${{ vars.WEB_VM_NAME }} ]; then
             vm_zone=${{ vars.WEB_VM_ZONE }}
             vm_name=${{ vars.WEB_VM_NAME }}
+          elif [ ${{ env.category }} == 'pwn' ] && [ ! -z ${{ vars.PWN_VM_NAME }} ]; then
+            vm_zone=${{ vars.PWN_VM_ZONE }}
+            vm_name=${{ vars.PWN_VM_NAME }}
+          elif [ ${{ env.category }} == 'misc' ] && [ ! -z ${{ vars.MISC_VM_NAME }} ]; then
+            vm_zone=${{ vars.MISC_VM_ZONE }}
+            vm_name=${{ vars.MISC_VM_NAME }}
           else
-            vm_zone=${{ vars.CHALLS_VM_ZONE }}
-            vm_name=${{ vars.CHALLS_VM_NAME }}
+            vm_zone=${{ vars.MIXED_CHALLS_VM_ZONE }}
+            vm_name=${{ vars.MIXED_CHALLS_VM_NAME }}
           fi
           
           echo "vm_zone=$vm_zone" >> $GITHUB_ENV
