--- a/.github/workflows/challenge-update.yaml
+++ b/.github/workflows/challenge-update.yaml
@@ -13,13 +13,13 @@ jobs:
       id-token: 'write'
     steps:
       # Basic setup
-      # - uses: actions/checkout@v4.1.7
-      # - run: |-
-      #     branch=${{github.head_ref}}
-      #     tokens=(${branch//'/'/ })
+      - uses: actions/checkout@v4.1.7
+      - run: |-
+          branch=${{github.head_ref}}
+          tokens=(${branch//'/'/ })
           
-      #     echo "category=${tokens[0]}" >> $GITHUB_ENV
-      #     echo "challenge=${tokens[1]}" >> $GITHUB_ENV
+          echo "category=${tokens[0]}" >> $GITHUB_ENV
+          echo "challenge=${tokens[1]}" >> $GITHUB_ENV
       # Check for files
       # - name: Check for Dockerfile
       #   id: check_dockerfile
@@ -31,11 +31,11 @@ jobs:
       #   uses: andstor/file-existence-action@v3.0.0
       #   with:
       #     files: "challenges/${{ github.head_ref }}/docker-compose.yaml"
-      # - name: Check for Static Folder
-      #   id: check_static
-      #   uses: andstor/file-existence-action@v3.0.0
-      #   with:
-      #     files: "challenges/${{ github.head_ref }}/static" 
+      - name: Check for Static Folder
+        id: check_static
+        uses: andstor/file-existence-action@v3.0.0
+        with:
+          files: "challenges/${{ github.head_ref }}/static" 
       # GCP Authentication
       - name: Authenticate with GCP
         id: gcp-auth
@@ -89,13 +89,13 @@ jobs:
       #     #TODO unsudo
       #     gcloud auth configure-docker us-east1-docker.pkg.dev
       #     gcloud compute ssh umasscybersec@${{ env.vm_name }} --zone=${{ vars.ZONE }} --command="docker kill ${{ env.challenge }} || true; sudo docker rm ${{ env.challenge }} || true; sudo docker run --pull=always -d --name ${{ env.challenge }} $PORT_STR ${{ env.image }}"
-      # # Other tasks
-      # - name: Upload Static Files
-      #   if: steps.check_static.outputs.files_exists == 'true'
-      #   uses: google-github-actions/upload-cloud-storage@v2
-      #   with:
-      #     path: 'challenges/${{github.head_ref}}/static'
-      #     destination: '${{vars.static_assets_bucket_name}}/${{github.head_ref}}'
+      # Other tasks
+      - name: Upload Static Files
+        if: steps.check_static.outputs.files_exists == 'true'
+        uses: google-github-actions/upload-cloud-storage@v2
+        with:
+          path: 'challenges/${{github.head_ref}}/static'
+          destination: '${{vars.static_assets_bucket_name}}/${{github.head_ref}}'
       # - name: Update CTFd
       #   run: |-
       #     ctfd_url="${{ vars.CTFD_URL }}"
