--- a/.github/workflows/challenge-update.yaml
+++ b/.github/workflows/challenge-update.yaml
@@ -68,7 +68,7 @@ jobs:
           path: 'challenges/${{ github.head_ref }}/static'
           destination: '${{ vars.STATIC_ASSETS_BUCKET_NAME }}/${{ github.head_ref }}'
       # Upload to CTFd (currently commented out)
-      # - name: Update CTFd
-      #   run: |
-      #     ctfd_url="${{ vars.CTFD_URL }}"
-      #     ./scripts/ctf-uploader "challenges" "defaults.yaml" $ctfd_url "${{ secrets.ctfd_token }}" "${{ vars.static_assets_bucket_name }}"
+      - name: Update CTFd
+        run: |
+          ctfd_url="${{ vars.CTFD_URL }}"
+          ./scripts/ctf-uploader "challenges" "defaults.yaml" $ctfd_url "${{ secrets.CTFD_TOKEN }}" "${{ vars.STATIC_ASSETS_BUCKET_NAME }}"
