--- a/.github/workflows/challenge-pr.yaml
+++ b/.github/workflows/challenge-pr.yaml
@@ -7,14 +7,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4.1.7
-      - name: Check for Dockerfile
-        id: check_dockerfile
-        uses: andstor/file-existence-action@v3.0.0
-        with:
-          files: "challenges/${{ github.head_ref }}/Dockerfile"
-      - name: Build Docker image
-        if: steps.check_dockerfile.outputs.files_exists == 'true'
-        run: |
-          docker build "challenges/${{ github.head_ref }}"
+      # - name: Check for Dockerfile
+      #   id: check_dockerfile
+      #   uses: andstor/file-existence-action@v3.0.0
+      #   with:
+      #     files: "challenges/${{ github.head_ref }}/Dockerfile"
+      # - name: Build Docker image
+      #   if: steps.check_dockerfile.outputs.files_exists == 'true'
+      #   run: |
+      #     docker build "challenges/${{ github.head_ref }}"
       - name: Check info.yaml
         run: ./scripts/ctf-uploader "challenges" "defaults.yaml"
