--- a/challenges/examples/example-pwn-or-crypto-chall/info.yaml
+++ b/challenges/examples/example-pwn-or-crypto-chall/info.yaml
@@ -1,3 +1,13 @@
-description: "example" 
+description: "This is just an example!" 
 flags: 
-  - content: "flag{hello}"
+  - content: "UMASS{example-pwn-or-crypto!92}"
+
+name: "Example Pwn Or Crypto"
+value: 100
+
+tags: 
+  - example 
+
+connection_info: nc 34.139.68.169 60000
+
+state: visible
