--- a/challenges/examples/example-web-chall/info.yaml
+++ b/challenges/examples/example-web-chall/info.yaml
@@ -7,6 +7,6 @@ value: 100
 tags: 
   - example 
 
-connection_info: nc 34.139.68.169 60001
+connection_info: http://34.139.68.169:60001/
 
 state: visible
