--- a/.github/workflows/challenge-pr.yaml
+++ b/.github/workflows/challenge-pr.yaml
@@ -7,14 +7,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4.1.7
-      # - name: Check for Dockerfile
-      #   id: check_dockerfile
-      #   uses: andstor/file-existence-action@v3.0.0
-      #   with:
-      #     files: "challenges/${{ github.head_ref }}/Dockerfile"
-      # - name: Build Docker image
-      #   if: steps.check_dockerfile.outputs.files_exists == 'true'
-      #   run: |
-      #     docker build "challenges/${{ github.head_ref }}"
+      - name: Build Docker Compose
+        run: |
+          output="$(docker compose build --dry-run 2>&1)"
+          if [ $? != 0 ] && [ "${output}" != "no configuration file provided: not found" ] ; then
+              echo "$output"
+              exit 1
+          fi
       - name: Check info.yaml
         run: ./scripts/ctf-uploader "challenges" "defaults.yaml"
