--- a/.github/workflows/challenge-pr.yaml
+++ b/.github/workflows/challenge-pr.yaml
@@ -9,6 +9,7 @@ jobs:
       - uses: actions/checkout@v4.1.7
       - name: Build Docker Compose
         run: |
+          # docker compose and ensure valid output
           output="$(docker compose build --dry-run 2>&1)"
           if [ $? != 0 ] && [ "${output}" != "no configuration file provided: not found" ] ; then
               echo "$output"
